Remove linhas sem estoque do aruquivo (igual a 0), mas falta formatar as mensagens. Talvez salvar as linhas removidas em um arquivo especifico para controle